# apps/api/src/modules/customer/dto/update-customer.dto.ts
@@ -14,14 +14,8 @@ export class UpdateCustomerDto {
   @IsOptional()
   @IsString()
   @MinLength(1)
-  @MaxLength(100)
-  firstName?: string;
-
-  @IsOptional()
-  @IsString()
-  @MinLength(1)
-  @MaxLength(100)
-  lastName?: string;
+  @MaxLength(200)
+  name?: string;
 
   @IsOptional()
   @IsEmail()
