# packages/api-client/openapi.snapshot.json
@@ -5928,15 +5928,10 @@
       "CreateCustomerDto": {
         "type": "object",
         "properties": {
-          "firstName": {
+          "name": {
             "type": "string",
             "minLength": 1,
-            "maxLength": 100
-          },
-          "lastName": {
-            "type": "string",
-            "minLength": 1,
-            "maxLength": 100
+            "maxLength": 200
           },
           "email": {
             "type": "string",
@@ -5952,17 +5947,13 @@
           }
         },
         "required": [
-          "firstName",
-          "lastName"
+          "name"
         ]
       },
       "CustomerEntity": {
         "type": "object",
         "properties": {
-          "firstName": {
-            "type": "string"
-          },
-          "lastName": {
+          "name": {
             "type": "string"
           },
           "email": {
@@ -6013,8 +6004,7 @@
           }
         },
         "required": [
-          "firstName",
-          "lastName",
+          "name",
           "status",
           "id",
           "organizationId",
@@ -6026,15 +6016,10 @@
       "UpdateCustomerDto": {
         "type": "object",
         "properties": {
-          "firstName": {
+          "name": {
             "type": "string",
             "minLength": 1,
-            "maxLength": 100
-          },
-          "lastName": {
-            "type": "string",
-            "minLength": 1,
-            "maxLength": 100
+            "maxLength": 200
           },
           "email": {
             "type": "string",
